--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,13 @@ php:
   - 5.6
   - hhvm
 
-before_install:
-  - composer self-update
-
 install:
-  - composer install --dev --prefer-source
+  - composer install --dev --no-interaction --prefer-source
 
 script:
   - vendor/bin/php-cs-fixer fix -v --dry-run src/
   - vendor/bin/phpunit -c phpunit.xml.dist
+
+after_script:
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
