--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -123,3 +123,7 @@ tools:
         excluded_dirs: [vendor, tests]
     php_pdepend: true
     php_sim: true
+    php_pdepend: true
+    php_cs_fixer: true
+    php_mess_detector: true
+    sensiolabs_security_checker: true
