Upgraded libs in composer, added scripts and some other small fixes

--- a/composer.json
+++ b/composer.json
@@ -1,40 +1,45 @@
 {
-    "name"        : "xmarcos/dot-container",
-    "description" : "DotContainer enables deep array access using dot-notation.",
-    "type"        : "library",
-    "license"     : "MIT",
-    "keywords"    : [
+    "name": "xmarcos/dot-container",
+    "description": "DotContainer enables deep array access using dot-notation.",
+    "type": "library",
+    "license": "MIT",
+    "keywords": [
         "dot-notation",
         "dot",
         "container",
-        "array"
+        "array",
+        "xmarcos"
     ],
-    "authors" : [
+    "authors": [
         {
-            "name"  : "Marcos Sader",
-            "email" : "xmarcos@gmail.com"
+            "name": "Marcos Sader",
+            "email": "xmarcos@gmail.com"
         }
     ],
-    "support" : {
-        "issues" : "https://github.com/xmarcos/DotContainer/issues"
+    "config": {
+        "optimize-autoloader": true,
+        "sort-packages": true
     },
-    "prefer-stable"     : true,
-    "minimum-stability" : "dev",
-    "require"           : {
-        "php" : ">=5.4.0"
+    "require": {
+        "php": "^5.4 || ^7.0"
     },
-    "require-dev" : {
-        "phpunit/phpunit"     : "@stable",
-        "fabpot/php-cs-fixer" : "@stable"
+    "require-dev": {
+        "phpunit/phpunit": "^4.8 || ^5.0 || ^6.4",
+        "xmarcos/php-cs-fixer-config": "^0.1"
     },
-    "autoload" : {
-        "psr-4" : {
-            "xmarcos\\Dot\\" : "src/"
+    "autoload": {
+        "psr-4": {
+            "xmarcos\\Dot\\": "src/"
         }
     },
-    "autoload-dev" : {
-        "psr-4" : {
-            "xmarcos\\Dot\\" : "tests/unit/"
+    "autoload-dev": {
+        "psr-4": {
+            "xmarcos\\Dot\\": "tests/unit/"
         }
+    },
+    "scripts": {
+        "test": "phpunit",
+        "cs": "php-cs-fixer fix --config=.php_cs.dist -v --diff --dry-run",
+        "cs-fix": "php-cs-fixer fix --config=.php_cs.dist -v --diff"
     }
 }
