--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
 language: php
 matrix:
   include:
-    - php: 5.4
-      env: WITH_LOWEST=true
-    - php: 5.5
-      env: WITH_LOWEST=true
     - php: 5.6
-      env: WITH_LOWEST=true
+      env: USE_LOCK=false
     - php: 7
     - php: 7.1
 fast_finish: true
@@ -21,8 +17,11 @@ before_install:
   - composer validate
 install:
   - >-
-    if [[ "$WITH_LOWEST" == "true" ]]; then composer update --prefer-lowest;
-    else composer install --prefer-source; fi;
+    if [[ "$USE_LOCK" == "false" ]];
+      then composer update;
+    else
+      composer install;
+    fi;
 script:
   - composer test
 notifications:
