--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
         "sort-packages": true
     },
     "require": {
-        "php": "^5.4 || ^7.0"
+        "php": "^5.6 || >=7.0 <7.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8 || ^5.0 || ^6.4",
+        "phpunit/phpunit": "^5.7 || ^6.4",
         "xmarcos/php-cs-fixer-config": "^0.1"
     },
     "autoload": {
